[package]
name = "arceus"
version = "0.1.0"
authors = ["supercmmetry <vishaals2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.4.4", default-features = false}
rocket_contrib = "0.4.4"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
jsonwebtoken = "7.1.0"
dotenv = "0.15.0"
slog = "2.5.2"